# greenHouseNK

./: .gitignore  CMakeLists.txt  README.md
FreeRTOS-KernelV10.6.2/include/: FreeRTOS.h
docs/: class.puml
src/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp  main.h  main_original.cpp
src/EEPROM/: EEPROMStorage.cpp  EEPROMStorage.h  eeprom.h
src/FanDriver/: FanDriver.cpp  FanDriver.h
src/UI/: ui.cpp  ui.h
src/ValveDriver/: ValveDriver.cpp  ValveDriver.h
src/cloud/: cloud.cpp  cloud.h  thingspeak_config.h
src/controller/: controller.cpp  controller.h
src/display/: framebuf.cpp  framebuf.h
src/i2c/: PicoI2C.cpp
src/ipstack/: IPStack.cpp  my_tls_client.cpp  tls_common.c
src/modbus/: ModbusClient.h
src/rot/: GpioEvent.h  call_back.cpp
src/sensors/: CO2Sensor.cpp  CO2Sensor.h  ISensor.cpp  ISensor.h  MHZTask.cpp  MHZTask.h  MHZTaskParams.h  PressureSensor.cpp  PressureSensor.h  TempRHSensor.cpp  TempRHSensor.h  sensors.h
src/systemTasks/: init-data.h  systemTasks.cpp  systemTasks.h
